--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,31 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: 104.21.33.130
-    port: 2052
-    cipher: auto
-    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: family.mgtajhiz.ir
-  - &id002
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: ru01.trojanyyds.xyz
-    port: 443
-    udp: true
-    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: ru01.trojanyyds.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id003
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
     server: us2.awslcn.info
@@ -45,137 +20,42 @@ proxies:
       path: /
       headers:
         host: us2.awslcn.info
+  - &id002
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 35.178.236.184
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id003
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 3.9.110.248
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
   - &id004
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
-    server: 104.21.75.246
+    server: 104.21.91.52
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: cf9277a9-7661-4b06-865d-b7c239deb26b
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /vmess
       headers:
-        host: sbl2.shabijichang.com
+        host: ee2.xv2ray.net
   - &id005
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id006
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: us01.trojanyyds.xyz
-    port: 443
-    udp: true
-    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: us01.trojanyyds.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: us1.awslcn.info
-    port: 25239
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.awslcn.info
-  - &id008
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
-    type: vmess
-    server: 162.159.192.244
-    port: 443
-    cipher: auto
-    uuid: 673ba378-840f-4928-81f2-203148d07350
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /673ba378-840f-4928-81f2-203148d07350
-      headers:
-        host: cowochtmtrkers.turbo021.link
-  - &id010
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=@apt_mahdi
-    port: 8443
-    udp: true
-    password: 
-      8Ka1hu4r3g@cf.network383.online:8443?type=grpc&sni=ams-trojan-grpc.carfin.tech&allowInsecure=1&serviceName=
-    sni: ams-trojan-grpc.carfin.tech
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '@apt_mahdi'
-  - &id011
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 5.104.107.143
-    port: 443
-    udp: true
-    password: 6befeeb3-702b-4948-9028-f9e072f2da98
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
-    type: vmess
-    server: cu.awslcn.info
-    port: 25284
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cu.awslcn.info
-  - &id013
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id014
     name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
     type: vmess
     server: cm1.awslcn.info
@@ -190,13 +70,111 @@ proxies:
       path: /
       headers:
         host: cm1.awslcn.info
-  - &id015
-    name: 🇺🇸_US_美国_5
+  - &id006
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 34.248.5.222
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
+    server: hexsen.com
+    port: 443
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argo-vmess?ed=2048
+      headers:
+        host: us.king361.cf
+  - &id008
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: trojan
+    server: us01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: us01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇭🇰_HK_香港->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: ru01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: ru01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 
+      ZjzcW3LXeJ@cf.network383.online:2096?type=ws&sni=amsb.network383.online&allowInsecure=1&path=/@apt_mahdi&host=amsb.network383.online
+    port: 2096
+    udp: true
+    password: 
+      ZjzcW3LXeJ@cf.network383.online:2096?type=ws&sni=amsb.network383.online&allowInsecure=1&path=/
+    sni: amsb.network383.online
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@apt_mahdi
+      headers:
+        host: amsb.network383.online
+  - &id012
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 146.235.227.242
+    port: 56052
+    cipher: auto
+    uuid: 5da8114c-0bc6-4416-aa3e-106bcc452161
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: microsoft.com
+  - &id013
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 46.182.107.15
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702215223320
+  - &id014
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: au-01.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -204,33 +182,37 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国_6
+        host: au-01.jikuai.xyz
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
+    server: us1.awslcn.info
+    port: 25239
     cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id017
-    name: 🇺🇦_UA_乌克兰
+        host: us1.awslcn.info
+  - &id016
+    name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
     type: vmess
-    server: 193.238.153.14
-    port: 8443
+    server: cu.awslcn.info
+    port: 25284
     cipher: auto
-    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cu.awslcn.info
 proxy-groups:
   - name: PROXY
     type: select
@@ -273,7 +255,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -295,7 +276,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
   - name: SELECT
     type: select
     proxies:
@@ -315,7 +295,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
