--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,6 +6,16 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 13.42.77.152
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id002
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
     server: us2.awslcn.info
@@ -20,27 +30,71 @@ proxies:
       path: /
       headers:
         host: us2.awslcn.info
-  - &id002
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 35.178.236.184
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: false
-    network: tcp
   - &id003
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 3.9.110.248
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: false
-    network: tcp
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: yes.cnmjcn.net
+    port: 16626
+    cipher: auto
+    uuid: c2c76420-257f-492a-b20f-6560f3bfa78d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
   - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: us1.awslcn.info
+    port: 25239
+    cipher: auto
+    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id005
+    name: 🇸🇬_SG_新加坡
+    type: trojan
+    server: 185.230.245.213
+    port: 3306
+    udp: true
+    password: d07a02a06191c99f
+    sni: n2.gladns.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /gateway/connect
+  - &id006
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vmess
+    server: tl.iranray.online
+    port: 8080
+    cipher: auto
+    uuid: b3c20911-126d-4c30-bd32-10152bf0b593
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tl.iranray.online
+  - &id007
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id008
     name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: 104.21.91.52
@@ -55,75 +109,28 @@ proxies:
       path: /vmess
       headers:
         host: ee2.xv2ray.net
-  - &id005
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: cm1.awslcn.info
-    port: 25230
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cm1.awslcn.info
-  - &id006
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 34.248.5.222
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: false
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: hexsen.com
-    port: 443
-    cipher: auto
-    uuid: de04add9-5c68-8bab-950c-08cd5320df18
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argo-vmess?ed=2048
-      headers:
-        host: us.king361.cf
-  - &id008
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: trojan
-    server: us01.trojanyyds.xyz
-    port: 443
-    udp: true
-    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: us01.trojanyyds.xyz
-    skip-cert-verify: true
-    network: tcp
   - &id009
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id010
     name: 🇭🇰_HK_香港->🇷🇺_RU_俄罗斯联邦
     type: trojan
     server: ru01.trojanyyds.xyz
     port: 443
     udp: true
     password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    sni: ru01.trojanyyds.xyz
     skip-cert-verify: true
     network: tcp
+  - &id010
+    name: 🇺🇸_US_美国->🇫🇮_FI_芬兰
+    type: vmess
+    server: rf.rafalion.ir
+    port: 8443
+    cipher: auto
+    uuid: 0198fa0c-221c-427c-8ab0-3a4829e73078
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
   - &id011
     name: 🇺🇸_US_美国_1
     type: trojan
@@ -141,25 +148,10 @@ proxies:
       headers:
         host: amsb.network383.online
   - &id012
-    name: 🇺🇸_US_美国_2
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 146.235.227.242
-    port: 56052
-    cipher: auto
-    uuid: 5da8114c-0bc6-4416-aa3e-106bcc452161
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: microsoft.com
-  - &id013
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 46.182.107.15
-    port: 30000
+    server: 142.171.202.130
+    port: 443
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
@@ -167,38 +159,61 @@ proxies:
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1702215223320
-  - &id014
-    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
-    type: vmess
-    server: au-01.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: au-01.jikuai.xyz
-  - &id015
+      path: /path/1702650992491
+  - &id013
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: vmess
-    server: us1.awslcn.info
-    port: 25239
+    server: hexsen.com
+    port: 443
     cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argo-vmess?ed=2048
+      headers:
+        host: us.king361.cf
+  - &id014
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /api/v3/download.getFile
       headers:
-        host: us1.awslcn.info
+        host: ssrsub.v03.ssrsub.com
+  - &id015
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40007
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
   - &id016
+    name: 🇬🇧_GB_英国_2
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id017
     name: 🇨🇳_CN_中国->🇲🇽_MX_墨西哥
     type: vmess
     server: cu.awslcn.info
@@ -211,8 +226,40 @@ proxies:
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: cu.awslcn.info
+  - &id018
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 46.182.107.15
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702215223320
+  - &id019
+    name: 🇯🇵_JP_日本->🇺🇸_US_美国
+    type: trojan
+    server: us01.trojanyyds.xyz
+    port: 443
+    udp: true
+    password: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
+    sni: us01.trojanyyds.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇺🇦_UA_乌克兰
+    type: vmess
+    server: 193.238.153.14
+    port: 8443
+    cipher: auto
+    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -255,6 +302,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -276,6 +327,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
   - name: SELECT
     type: select
     proxies:
@@ -295,6 +350,10 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
