--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,263 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 38.91.107.37
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id002
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 46.182.107.15
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702215223320
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: usasb2.ip8.shop
-    port: 26460
-    cipher: auto
-    uuid: c15bccff-fa39-4252-f789-4f997542e0b4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 38.180.33.136
-    port: 50104
-    cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
     name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id006
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 141.95.106.33
-    port: 1080
-    password: KAffy7oieVJYGKFjHvUE3g
-    cipher: aes-128-gcm
-  - &id007
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 46.29.166.237
-    port: 47555
-    cipher: auto
-    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇱🇹_LT_立陶宛
-    type: ss
-    server: tvc.sabz.top
-    port: 15171
-    password: rct9lNBCpv79OOcJmjIZ0mHxGSWnn0DXmMPgtBeQqztu
-    cipher: aes-128-gcm
-  - &id009
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 213.202.216.14
-    port: 443
-    udp: true
-    password: cfef26c9-b22b-4ee1-8d95-c00f2c3b5d2e
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: trojan
-    server: 89.221.224.93
-    port: 80
-    udp: true
-    password: 9e77b491-73d4-4ea3-985b-cfe3ae583580
-    sni: is1-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇷🇺_RU_俄罗斯联邦_3
-    type: trojan
-    server: 89.221.224.94
-    port: 80
-    udp: true
-    password: 28c79056-ccfd-4cc1-93d4-c337cc782e65
-    sni: is2-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 18.216.249.151
-    port: 46403
-    cipher: auto
-    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id014
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 172.233.188.217
-    port: 55579
-    cipher: auto
-    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: 78.47.217.216
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 144.202.84.47
-    port: 57848
-    cipher: auto
-    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 172.233.188.166
-    port: 11397
-    cipher: auto
-    uuid: 20e0d67d-f7aa-4bb1-daae-b7f217306bba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇫🇷_FR_法国_2
-    type: vmess
-    server: 146.59.147.250
-    port: 29776
-    cipher: auto
-    uuid: 82447abf-dcb9-408a-9ca6-79e0a7698d08
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇮🇷_IR_伊朗_1
-    type: vmess
-    server: 91.107.172.128
-    port: 3350
-    cipher: auto
-    uuid: 2bf900ac-909a-4610-dc18-86a3a136b286
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 144.202.81.122
-    port: 25514
-    cipher: auto
-    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id021
-    name: 🇮🇷_IR_伊朗_2
-    type: vmess
-    server: duss.celebjared.pk
-    port: 80
-    cipher: auto
-    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /Y07GAOt43udo1xvoAgfajHtB
-      headers:
-        host: duss.celebjared.pk
-  - &id022
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: 057bf3ac-fda1-44c3-aa8e-07eed7ddc5b6
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 18.169.3.36
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id024
-    name: 🇺🇸_US_美国_10
-    type: trojan
-    server: jp1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 92d3e5b6-6e8c-483b-a72b-000568d2e814
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇩🇪_DE_德国_4
     type: trojan
     server: www.casperco.online
     port: 993
@@ -271,83 +15,7 @@ proxies:
     sni: www.casperco.online
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇯🇵_JP_日本
-    type: trojan
-    server: 54.168.244.142
-    port: 3306
-    udp: true
-    password: d07a02a06191c99f
-    sni: n2.gladns.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /gateway/connect
-      headers:
-        host: n2.gladns.com
-  - &id027
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 168.235.72.221
-    port: 15551
-    cipher: auto
-    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇺🇸_US_美国_12
-    type: ss
-    server: 45.58.39.13
-    port: 58428
-    password: 31LdYhP8Ae
-    cipher: aes-256-gcm
-  - &id029
-    name: 🇬🇧_GB_英国_2
-    type: vmess
-    server: UK99.5GTOCDOCAO.COM
-    port: 80
-    cipher: auto
-    uuid: 7a2c5296-683d-48db-9856-373cafac48b5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /5gtocdocao.com
-      headers:
-        host: dl.kgvn.garenanow.com
-  - &id030
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 104.21.75.246
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id031
-    name: 🇷🇺_RU_俄罗斯联邦_4
-    type: ss
-    server: 45.144.30.202
-    port: 28490
-    password: yZdRgske85Hou96z2dRdtH
-    cipher: chacha20-ietf-poly1305
-  - &id032
-    name: 🇷🇺_RU_俄罗斯联邦_5
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
-  - &id033
+  - &id002
     name: 🇮🇳_IN_印度_1
     type: vmess
     server: 103.113.68.233
@@ -362,22 +30,27 @@ proxies:
       path: /vmess
       headers:
         host: 103.113.68.233
-  - &id034
-    name: 🇩🇪_DE_德国_5
-    type: trojan
-    server: www.casperco.online
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    skip-cert-verify: true
-    network: tcp
-  - &id035
-    name: 🇮🇳_IN_印度_2
+  - &id003
+    name: 🇵🇱_PL_波兰_1
     type: vmess
-    server: ru1-vmess.sshmax.xyz
-    port: 80
+    server: 94.131.96.137
+    port: 2082
     cipher: auto
-    uuid: 61cf7313-1503-4bab-beeb-ba69fd5843ae
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: internet.life.com.by
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id004
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: ee1-vmess.sshmax.xyz
+    port: 8080
+    cipher: auto
+    uuid: e1b896aa-bb87-4804-b5ba-c34493e9296b
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -385,14 +58,379 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: ru1-vmess.sshmax.xyz
-  - &id036
-    name: 🇷🇺_RU_俄罗斯联邦_6
+        host: ee1-vmess.sshmax.xyz
+  - &id005
+    name: 🇩🇪_DE_德国_3
+    type: vmess
+    server: 5.181.23.67
+    port: 2082
+    cipher: auto
+    uuid: e342ac69-9671-4b47-bd62-64002ac97d8b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee1-vmess.sshmax.xyz
+  - &id006
+    name: 🇩🇪_DE_德国_4
+    type: vmess
+    server: 5.181.23.67
+    port: 8080
+    cipher: auto
+    uuid: e1b896aa-bb87-4804-b5ba-c34493e9296b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 5.181.23.67
+  - &id007
+    name: 🇩🇪_DE_德国_5
+    type: vmess
+    server: ee1-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 34d4f393-ead9-48df-9370-ca8b52e6aabd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee1-vmess.sshmax.xyz
+  - &id008
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 172.67.84.174
+    port: 443
+    cipher: auto
+    uuid: D8813DCB-426C-4952-B384-8951B0444EC1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: fakekansas.Kotick.site
+    network: ws
+    ws-opts:
+      path: /speedtest?ed=2048
+      headers:
+        host: kansas.Kotick.site
+  - &id009
+    name: 🇵🇱_PL_波兰_2
+    type: vmess
+    server: 94.131.96.137
+    port: 80
+    cipher: auto
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id010
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 207.148.26.144
+    port: 22589
+    cipher: auto
+    uuid: 10877446-f9aa-4b84-ec43-a688521815dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.233.188.217
+    port: 55579
+    cipher: auto
+    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 92d3e5b6-6e8c-483b-a72b-000568d2e814
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇺🇸_US_美国_5
     type: ss
-    server: is1.ssproxy.xyz
-    port: 1443
-    password: OWJlYjYy
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: jp2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 92d3e5b6-6e8c-483b-a72b-000568d2e814
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇩🇪_DE_德国_6
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id016
+    name: 🇩🇪_DE_德国_7
+    type: vmess
+    server: de2-v2ray.ipracevpn.com
+    port: 8443
+    cipher: auto
+    uuid: 380d6ba2-11f1-43c9-9145-fb279f4e53bc
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇩🇪_DE_德国_8
+    type: trojan
+    server: 78.47.217.216
+    port: 993
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: us-02.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-02.jikuai.xyz
+  - &id019
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 144.202.81.122
+    port: 25514
+    cipher: auto
+    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id020
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 172.234.17.31
+    port: 48771
+    cipher: auto
+    uuid: f1c2be64-961b-407a-c4e0-b8919ca1253b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇵🇱_PL_波兰_3
+    type: vmess
+    server: 94.131.96.137
+    port: 8080
+    cipher: auto
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 62.60.131.238
+    port: 12888
+    cipher: auto
+    uuid: 66214d78-b33c-459a-a7b9-e50ab19d16b9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id025
+    name: 🇮🇷_IR_伊朗
+    type: vmess
+    server: 79.143.84.117
+    port: 24141
+    cipher: auto
+    uuid: 46465bbe-628a-4988-ae3c-0c164237a039
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇵🇱_PL_波兰_4
+    type: vmess
+    server: 94.131.96.137
+    port: 2086
+    cipher: auto
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 94.131.96.137
+  - &id027
+    name: 🇵🇱_PL_波兰_5
+    type: vmess
+    server: pl2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: pl2-vmess.sshmax.xyz
+  - &id028
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 108.165.113.99
+    port: 443
+    cipher: auto
+    uuid: ef22fad3-652a-48fc-e80a-46faa3a6a787
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id029
+    name: 🇮🇳_IN_印度_2
+    type: vmess
+    server: ru-v2ray.ipracevpn.com
+    port: 8443
+    cipher: auto
+    uuid: 6b65926e-110d-4728-a807-5670d8829e09
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: ss
+    server: 95.164.37.226
+    port: 8388
+    password: NjJkZmYw
     cipher: chacha20-ietf-poly1305
+  - &id031
+    name: 🇩🇪_DE_德国_9
+    type: trojan
+    server: 78.47.217.216
+    port: 1935
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇩🇪_DE_德国_10
+    type: trojan
+    server: www.casperco.online
+    port: 1935
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    skip-cert-verify: true
+    network: tcp
+  - &id033
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
+  - &id034
+    name: 🇵🇱_PL_波兰_6
+    type: vmess
+    server: 94.131.96.137
+    port: 2095
+    cipher: auto
+    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id035
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -454,7 +492,6 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -495,7 +532,6 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -534,7 +570,6 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
